Fix dark mode button and article card color

--- a/themes/hugo-notepadium/assets/css/critical-style.css
+++ b/themes/hugo-notepadium/assets/css/critical-style.css
@@ -47,6 +47,11 @@ html[data-theme='dark'] {
 .data-theme-btn {
     border: none;
     transition: .3s;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    cursor:pointer;
+    overflow: hidden;
+    outline:none;
     padding-right: 0;
     padding-left: 0;
 }
@@ -379,9 +384,9 @@ ul.archive-list li {
 
 .article-containter {
     padding: 20px;
-    background-color: #fdfdfd;
+    background-color: var(--note-background-color);
     border-radius: 6px;
-    box-shadow: 0 1px 5px rgba(27,31,35,0.15);
+    box-shadow: var(--note-box-shadow);
     margin-bottom: 20px;
 }
 
